--- a/Task-SPA/src/app/user-list/user-list.component.html
+++ b/Task-SPA/src/app/user-list/user-list.component.html
@@ -1,5 +1,6 @@
 
 
+<div *ngIf="this.globals.role">
 
   <table class="table table-bordered table-hover">
     <thead>
@@ -16,3 +17,4 @@
       </tr>
     </tbody>
   </table>
+  <div>
