--- a/Task-SPA/src/app/app.component.html
+++ b/Task-SPA/src/app/app.component.html
@@ -1,5 +1,22 @@
-
 <div class="container-fluid mt-5 mr-5">
+
+  <div class="row">
+    <div class="col-md-6">
+      <app-login></app-login>
+    </div>
+
+    <div class="col-md-6">
+      <app-registeration></app-registeration>
+    </div>
+
+  </div>
+
+</div> 
+
+<hr size="100" color=black>
+
+
+    <div class="container-fluid mt-5 mr-5">
 
   <div class="row">
     <div class="col-md-6">
@@ -13,10 +30,3 @@
   </div>
 
 </div> 
-
-
-
-
-
-
-
