Happy Code Ending

--- a/Task-SPA/src/app/user-item/user-item.component.html
+++ b/Task-SPA/src/app/user-item/user-item.component.html
@@ -2,7 +2,7 @@
 <form ngForm="form" (submit)="mySubmit()">
 
   <input type="hidden" name="id" [(ngModel)]="service.user.id">
-  <input type="hidden" name="statue" [(ngModel)]="service.user.state">
+  <input type="hidden" name="state" [(ngModel)]="service.user.state">
   
   <div class="form-group">
       <label for="name">Name Of User: </label>
