--- a/Task-SPA/src/app/registeration/registeration.component.html
+++ b/Task-SPA/src/app/registeration/registeration.component.html
@@ -6,12 +6,12 @@
 
     <div class="form-group">
         <label for="name">Name : </label>
-        <input type="text" name="name" [(ngModel)]="service.actor1.name"  class="form-control">
+        <input type="text" name="name" [(ngModel)]="service.actor.name"  class="form-control">
     </div>
 
     <div class="form-group">
         <label for="password">Password : </label>
-        <input type="text" name="password" [(ngModel)]="service.actor1.password"  class="form-control">
+        <input type="text" name="password" [(ngModel)]="service.actor.password"  class="form-control">
     </div>
 
     <input type="submit" class="btn btn-primary btn-lg" value="Register Now">
